src/objects/Contratto__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contratto</relationshipLabel>
        <relationshipName>Contratti</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Contratti</relationshipLabel>
        <relationshipName>Contratto</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AttivoCheckbox__c</fullName>
        <formula>AND(NOT(Disattiva__c),TODAY() &gt;=  DataInizio__c , TODAY() &lt;=  DataFine__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attivo Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attivo__c</fullName>
        <formula>IMAGE(
IF( AttivoCheckbox__c , &quot;/resource/icone/Altre/green_light.png&quot;,&quot;/resource/icone/Altre/red_light.png&quot;),&quot;&quot;,25,25)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attivo?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChiamateAnnuali__c</fullName>
        <label>Chiamate Annuali</label>
        <summarizedField>Licenza__c.ChiamateAnnuali__c</summarizedField>
        <summaryForeignKey>Licenza__c.Contratto__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ChiamateMensili__c</fullName>
        <label>Chiamate Mensili</label>
        <summarizedField>Licenza__c.ChiamateMensili__c</summarizedField>
        <summaryForeignKey>Licenza__c.Contratto__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ChiamateTotali__c</fullName>
        <label>Chiamate Totali</label>
        <summarizedField>Licenza__c.ChiamateTotali__c</summarizedField>
        <summaryForeignKey>Licenza__c.Contratto__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DataFine__c</fullName>
        <label>Data Fine</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DataInizio__c</fullName>
        <label>Data Inizio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Descrizione__c</fullName>
        <label>Descrizione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disattiva__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disattiva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LimiteChiamateMensiliTotali__c</fullName>
        <formula>NumeroLicenze__c * LimiteChiamateMensiliUtente__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Limite Chiamate Mensili Totali</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LimiteChiamateMensiliUtente__c</fullName>
        <label>Limite Chiamate Mensili Utente</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumeroLicenze__c</fullName>
        <label>Numero Licenze</label>
        <summaryFilterItems>
            <field>Licenza__c.Disattiva__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Licenza__c.Contratto__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ResetContatoreAnnuale__c</fullName>
        <label>Reset Contatore Annuale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ResetContatoreMensile__c</fullName>
        <label>Reset Contatore Mensile</label>
        <type>Date</type>
    </fields>
    <label>Contratto</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tutto</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Numero Contratto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contratti</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>